Updated User example (support DELETE, PATCH, POST, PUT methods)
Refactored resource to store dummy data in session storage
